[package]
name = "mkl25z4-hal"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
description = "HAL for the MKL25Z family of microcontrollers"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mgottschlag/mkl25z4-hal"

[dependencies]
cortex-m = "0.6.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
mkl25z4 = "0.0.3"
nb = "0.1.1"

[dependencies.void]
default-features = false
version = "1.0.2"

